Added sample map with touch & drag

--- a/TestApplication/app/src/main/res/layout/fragment_first.xml
+++ b/TestApplication/app/src/main/res/layout/fragment_first.xml
@@ -6,19 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".FirstFragment">
 
-    <!-- Placeholder for the Map, centered and with specified dimensions -->
+    <!-- Assuming this is within your fragment's layout -->
     <FrameLayout
         android:id="@+id/mapContainer"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintVertical_bias="0.5"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintDimensionRatio="H,1:1">
-        <!-- Your MapView or MapFragment goes here -->
+        app:layout_constraintEnd_toEndOf="parent">
+        <!-- MapView will be added programmatically here -->
     </FrameLayout>
 
     <!-- SearchView at the top -->
